rnsc/test_data/integration/error/parser/class_header/trailing_identifier.rns
.class MyClass SomethingElse
.super java/lang/Object